# llm_retrieval_jawiki

./: .gitignore  README.md
llm_retrieval/: docker-compose.yml
llm_retrieval/config/: indexer.yml  openai.yml  qa.yml  qdrant.yml
llm_retrieval/src/: pyproject.toml
llm_retrieval/src/qa/answer/: answerer.py  api.py  openai_qa.py
llm_retrieval/src/qa/datastore/: __init__.py  datastore.py  qdrant.py
llm_retrieval/src/qa/indexer/: main.py
llm_retrieval/src/qa/loader/: __init__.py  base.py  jawiki_loader.py
llm_retrieval/src/qa/schemas/: __init__.py  api.py  configs.py  models.py
llm_retrieval/src/qa/service/: openai_chat.py
llm_retrieval/src/qa/vectorizer/: base.py  model_vectorizer.py  openai_vectorizer.py
llm_retrieval/src/qa/vectorizer/internal_model/: __init__.py  sentence_t5.py
